--- a/style.css
+++ b/style.css
@@ -1,47 +1,148 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    text-align: center;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: #fffbf7;
+  }
+ 
 
-      body {
-          background-color: #fffbf7;
-      }
-      
-      
-      h1 {
 
-            color: green;
+
+
+    h1 {
             text-align: center;
+            color: #025157;
+            font-family: serif;
             font-size: 60px;
-            margin-bottom: center;
+            margin-bottom: 24px;
+            
             
         }
 
-        h4 {
+    h4 {
 
             text-align: center;
             font-size: 20px;
+            color: #46484c;
+            font-size: 20px;
+            margin-bottom: 30px;
         }
 
         form {
             text-align: center;
+            height: 55px;
+            margin: 0;
+            box-sizing: border-box;
+
+            
         }
         
         p{
             text-align: center;
             color: #8b8b8bcc;
             margin-top: 15px;
+            padding: 0;
+            box-sizing: border-box;
         }
             
        input {
-           border-radius: 10px;
-           padding: 10px;
-           border: solid #8b8b8bcc;
-           height: 30px;
 
-         
+           border: 1px solid #b6b6b6;
+           padding: 6px 20px;
+           width: 60%;
+           max-width: 250px;
+           border-radius: 8px;
+           height: 100%;
+              
        }
 
-   button {
-         margin: -5px;
-         border-radius: 10px;
-         padding: 10px;
-         background: green;
+    button {
+   
+         background: #025157;
+         color: #fff;
+         border: none;
+         border-top-left-radius: 0;
+         border-bottom-left-radius: 0;
+         padding: 6px 20px;
+         margin-left: -10px;
+         height: 100%;
+         border-radius: 8px;
+        
    }    
  
+   .banner {
+
+    
+    margin-top: 32px;
+    margin: 0 0 1rem;
+    padding: 0px;
+    box-sizing: border-box;
+
+   }
+
+   .header {
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 0;
+    height: 45px;
+    font-family: sans-serif;
+
+   }
+    .header > *{
+        display: inline-block;
+        font-size: 16px;
+        vertical-align: middle;
+        height: 100%;
+        line-height: 45px;
+    
+
+  }
+  
+  .navbar {
+    width: 70%;
+    text-align: center;
+    color: #025157;
+    font-weight: 500;
+
+  }
+  
+  .menu-item {
+    display: inline;
+    margin-right: 25px;
+    margin-left: 25px;
+  }
+  
+  .actions {
+    width: 15%;
+    text-align: right;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  
+  .actions > * {
+    margin: 0 10px;
+
+  }
+  .actions a {
+    color: #67b54b;
+  }
+  
+  .actions button {
+    color: white;
+    background-color: #67b54b;
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border: 0;
+    border-radius: 5px;
+  }
+  .logo > img {
+    height: 100%;
+  }
