--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   }
  
 main{
-  margin-top: 285px;
+  margin-top: 150px;
   text-align: center;
 }
 
@@ -25,51 +25,53 @@ h1 {
 
  h4 {
 
-    text-align: center;
-    font-size: 20px;
     color: #46484c;
+    font-family: "Slabo 27px", serif;
     font-size: 20px;
     margin-bottom: 30px;
     
     }
+ 
+form {
+    text-align: center;
+    height: 55px;
+    margin: 0;
+    box-sizing: border-box;
 
-        form {
-            text-align: center;
-            height: 55px;
-            margin: 0;
-            box-sizing: border-box;
-          }
+    }
         
-        p{
-            text-align: center;
-            color: #8b8b8bcc;
-            margin-top: 15px;
-            padding: 0;
-            box-sizing: border-box;
-        }
+p {
+  
+  color: #8b8b8bcc;
+  margin-top: 15px;
+  margin-bottom: 1rem;
+  padding: 0;
+  box-sizing: border-box;
+        
+}
             
-       input {
+input {
 
-           border: 1px solid #b6b6b6;
-           padding: 6px 20px;
-           width: 60%;
-           max-width: 250px;
-           border-radius: 8px;
-           height: 100%;
+  border: 1px solid #b6b6b6;
+  padding: 6px 20px;
+  width: 60%;
+  max-width: 250px;
+  border-radius: 8px;
+  height: 100%;
               
        }
 
-    button {
+button {
    
-         background: #025157;
-         color: #fff;
-         border: none;
-         border-top-left-radius: 0;
-         border-bottom-left-radius: 0;
-         padding: 6px 20px;
-         margin-left: -10px;
-         height: 100%;
-         border-radius: 8px;
+  background: #025157;
+  color: #fff;
+  border: none;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 6px 20px;
+  margin-left: -10px;
+  height: 100%;
+  border-radius: 8px;
         
    }    
  
@@ -111,7 +113,7 @@ h1 {
   
    .section {
 
-    margin-top: 285px;
+    margin-top: 150px;
     text-align: center;
    } 
 
@@ -136,8 +138,6 @@ h1 {
 
   }
 
-
-  
   .menu-item {
     display: inline;
     margin-right: 25px;
@@ -184,6 +184,10 @@ h1 {
 
   }
 
+  figure {
+    margin-top: 32px;
+  }
+  
   .explanatory-video {
     display: flex;
     flex-direction: column;
@@ -274,12 +278,94 @@ h1 {
     flex: 1;
     width: 40%;
     position: relative;
-    right: -50px;
+    right: -80px;
     height: 80%;
     transition: right 1s;
+   
+  }
+  .features .feature-card .feature-image:hover{
 
-  }.features .feature-card .feature-image figure,
+    right: -40px;
+  }
+  
+  .features .feature-card .feature-image figure,
   .features .feature-card .feature-image img {
     margin-top: 0;
     height: 100%;
   }
+
+  @media (max-width: 425px) {
+
+    .navbar, .actions {
+
+      display: none;
+    }
+   
+    h1 {
+
+      font-size: 30px;
+
+    }
+
+    figure {
+      margin-top: 32px;
+  }
+    
+    .main .section {
+      margin-top: 100px;
+      
+    }
+
+    .banner >img {
+     width: 100%;
+    }
+
+    .intro {
+      width: 100%;
+    }
+
+    .promo {
+      flex-direction: column;
+      width: 90%;
+    }
+
+    .explanatory-video > video {
+      width: 100%;
+
+    }
+
+    .publish{
+      margin-top: 10px;
+    }
+
+    .publish > h3{
+      font-size:25px;
+      line-height: 30px;
+      margin-top: 15px;
+    }
+    .publish >form{
+      flex-direction: column;
+
+    }
+
+    .publish > form > div{
+      height: 50px;
+      margin-top: 50px;
+
+    }
+
+    .publish > form > div > input{
+      width: 65%;
+
+    }
+    
+    .features{
+      padding: 5% 0;
+      grid-template: repeat(4, 1fr) / 1fr;
+    }
+
+    .feature-image{
+      display:none;
+    }
+  }
+
